Go back to older bind-api to restore swagger support Use different B64 & Hex library